feat: redirect nhctl command error output to standard output